<resources>
    <string name="app_name">voip_phone</string>

    <string name="on_button_name">ON</string>
    <string name="off_button_name">OFF</string>
    <string name="exit_button_name">EXIT</string>
    <string name="register_button_name">REGISTER</string>
    <string name="contact_button_name">CONTACT</string>
    <string name="call_button_name">CALL</string>
    <string name="bye_button_name">BYE</string>
    <string name="ok_button_name">OK</string>
    <string name="audio_codec_select_button_name">Select codec</string>
    <string name="contact_add_button_name">Add</string>
    <string name="contact_search_button_name">Search</string>
    <string name="contact_modify_button_name">Modify</string>
    <string name="contact_remove_button_name">Remove</string>

    <string name="proxy_host_name_hint">proxy host name</string>
    <string name="remote_host_name_hint">remote host name</string>
    <string name="local_host_name_hint">local host name</string>
    <string name="from_sip_ip_hint">local sip ip</string>
    <string name="from_sip_port_hint">local sip port</string>
    <string name="media_ip_hint">local media sip</string>
    <string name="media_port_hint">local media port</string>
    <string name="record_path_hint">record path</string>

    <string name="client_mode_switch_name">CLIENT-MODE</string>
    <string name="use_proxy_switch_name">USE-PROXY</string>
    <string name="proxy_mode_switch_name">PROXY-MODE</string>
    <string name="auto_accept_switch_name">AUTO-ACCEPT</string>
    <string name="dtmf_switch_name">DTMF</string>
    <string name="send_wav_switch_name">SEND-WAV</string>

    <string name="none">none</string>

    <string name="dtmf_0">0</string>
    <string name="dtmf_1">1</string>
    <string name="dtmf_2">2</string>
    <string name="dtmf_3">3</string>
    <string name="dtmf_4">4</string>
    <string name="dtmf_5">5</string>
    <string name="dtmf_6">6</string>
    <string name="dtmf_7">7</string>
    <string name="dtmf_8">8</string>
    <string name="dtmf_9">9</string>
    <string name="dtmf_star">*</string>
    <string name="dtmf_shop">#</string>

    <string name="contact_name">Name</string>
    <string name="contact_email">Email</string>
    <string name="contact_mdn">Mdn</string>
    <string name="contact_sip_ip">Sip-IP</string>
    <string name="contact_sip_port">Sip-Port</string>
    <string name="add_contact">Add Contact</string>
    <string name="profile_image">profile image</string>
    <string name="default_port_number">5060</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="default_ip">127.0.0.1</string>
    <string name="default_mdn">010-0000-0000</string>

</resources>