<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PhoneFragment"
    android:orientation="vertical"
    android:gravity="center_vertical"
    style="@style/RelativeLayout"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity ="center"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".OptionFragment"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginBottom="10sp"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/onButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/on_button_name"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/offButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/off_button_name"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/exitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/exit_button_name"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/proxyHostNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                app:counterMaxLength="20"
                app:counterEnabled="true"
                android:inputType="text"
                android:maxLength="20"
                android:singleLine="false"
                android:scrollbars="vertical"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/proxyHostNameInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/proxy_host_name_hint"
                    android:minHeight="48sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10sp"
                >
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/register_button_name"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/contactButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/contact_button_name"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/remoteHostNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                app:counterMaxLength="20"
                app:counterEnabled="true"
                android:maxLength="20"
                android:singleLine="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/remoteHostNameInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/remote_host_name_hint"
                    android:inputType="text"
                    android:minHeight="48sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20sp"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/callButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/call_button_name"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/byeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/bye_button_name"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

            </LinearLayout>


            <GridLayout
                android:id="@+id/dtmf_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="50sp"
                android:columnCount="3"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dtmf_1"
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginBottom="5sp"

                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/dtmf_1"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dtmf_2"
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginBottom="5sp"

                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/dtmf_2"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dtmf_3"
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginBottom="5sp"

                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/dtmf_3"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dtmf_4"
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginBottom="5sp"

                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/dtmf_4"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dtmf_5"
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginBottom="5sp"

                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/dtmf_5"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dtmf_6"
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginBottom="5sp"

                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/dtmf_6"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dtmf_7"
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginBottom="5sp"

                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/dtmf_7"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dtmf_8"
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginBottom="5sp"

                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/dtmf_8"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dtmf_9"
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginBottom="5sp"

                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/dtmf_9"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dtmf_star"
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginBottom="5sp"

                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/dtmf_star"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dtmf_0"
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginBottom="5sp"

                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/dtmf_0"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dtmf_shop"
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginBottom="5sp"

                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/dtmf_shop"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp"
                    />

            </GridLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>