<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/RelativeLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity ="center"
        android:fillViewport="true"
        android:paddingBottom="50sp"
        >

        <LinearLayout
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.screen.fragment.OptionFragment"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            >

            <!--<ImageView
                android:id="@+id/add_contact_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/unspecified_person"
                android:contentDescription="@string/profile_image" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_name" />

                <EditText
                    android:id="@+id/editText_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/contact_name"
                    android:inputType="textPersonName"
                    android:autofillHints=""
                    android:maxLength="20"
                    android:singleLine="false"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_email" />

                <EditText
                    android:id="@+id/editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/contact_email"
                    android:inputType="textWebEmailAddress"
                    android:autofillHints=""
                    android:maxLength="50"
                    android:singleLine="false"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_mdn" />

                <EditText
                    android:id="@+id/editText_mdn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/default_mdn"
                    android:inputType="phone"
                    android:autofillHints=""
                    android:maxLength="11"
                    android:singleLine="false"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_sip_ip" />

                <EditText
                    android:id="@+id/editText_sip_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/default_ip"
                    android:inputType="text"
                    android:autofillHints=""
                    android:maxLength="15"
                    android:singleLine="false"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_sip_port" />

                <EditText
                    android:id="@+id/editText_sip_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/default_port_number"
                    android:inputType="number"
                    android:autofillHints=""
                    android:maxLength="5"
                    android:singleLine="false"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="30sp"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp">
                </com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    app:strokeWidth="3sp">
                </com.google.android.material.button.MaterialButton>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>