<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="horizontal"
    style="@style/RelativeLayout"
    >

    <!--<ImageView
        android:id="@+id/contact_info_imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:src="@drawable/unspecified_person" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView_name_des"
                android:layout_width="65sp"
                android:layout_height="wrap_content"
                android:text="@string/contact_name" />

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView_email_des"
                android:layout_width="65sp"
                android:layout_height="wrap_content"
                android:text="@string/contact_email" />

            <TextView
                android:id="@+id/textView_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView_mdn_des"
                android:layout_width="65sp"
                android:layout_height="wrap_content"
                android:text="@string/contact_mdn" />

            <TextView
                android:id="@+id/textView_mdn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView_sip_ip_des"
                android:layout_width="65sp"
                android:layout_height="wrap_content"
                android:text="@string/contact_sip_ip" />

            <TextView
                android:id="@+id/textView_sip_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView_sip_port_des"
                android:layout_width="65sp"
                android:layout_height="wrap_content"
                android:text="@string/contact_sip_port" />

            <TextView
                android:id="@+id/textView_sip_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="5sp"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_call"
                android:layout_width="100sp"
                android:layout_height="40sp"
                android:text="@string/call_button_name"
                android:textSize="11sp"
                android:textColor="@color/white"
                app:strokeColor="@color/white"
                app:strokeWidth="3sp">
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/contact_modify_button"
                android:layout_width="100sp"
                android:layout_height="40sp"
                android:text="@string/contact_modify_button_name"
                android:textSize="11sp"
                android:textColor="@color/white"
                android:layout_marginStart="10sp"
                app:strokeColor="@color/white"
                app:strokeWidth="3sp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/contact_remove_button"
                android:layout_width="100sp"
                android:layout_height="40sp"
                android:text="@string/contact_remove_button_name"
                android:textSize="11sp"
                android:textColor="@color/white"
                android:layout_marginStart="10sp"
                app:strokeColor="@color/white"
                app:strokeWidth="3sp"
                />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>